knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTP_Delivery__c.field-meta.xml
<CustomField>
    <fullName>FTP_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FTP Delivery</label>
    <type>Checkbox</type>
</CustomField>