knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPAuthenticationType__c.field-meta.xml
<CustomField>
    <fullName>FTPAuthenticationType__c</fullName>
    <label>FTPAuthenticationType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>tls</fullName>
            </value>
            <value>
                <fullName>ssl</fullName>
            </value>
            <value>
                <fullName>ssh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>