knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPChannelProtection__c.field-meta.xml
<CustomField>
    <fullName>FTPChannelProtection__c</fullName>
    <label>FTPChannelProtection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>clear</fullName>
            </value>
            <value>
                <fullName>confidential</fullName>
            </value>
            <value>
                <fullName>integrity</fullName>
            </value>
            <value>
                <fullName>private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>