knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPConnectionTimeout__c.field-meta.xml
<CustomField>
    <fullName>FTPConnectionTimeout__c</fullName>
    <label>FTPConnectionTimeout</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>