knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPImplicitAuthentication__c.field-meta.xml
<CustomField>
    <fullName>FTPImplicitAuthentication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FTPImplicitAuthentication</label>
    <type>Checkbox</type>
</CustomField>