knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPKeepAliveInterval__c.field-meta.xml
<CustomField>
    <fullName>FTPKeepAliveInterval__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FTPKeepAliveInterval</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>