knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPPassiveTransfer__c.field-meta.xml
<CustomField>
    <fullName>FTPPassiveTransfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FTPPassiveTransfer</label>
    <type>Checkbox</type>
</CustomField>