knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPPassword__c.field-meta.xml
<CustomField>
    <fullName>FTPPassword__c</fullName>
    <label>FTPPassword</label>
    <length>25</length>
    <type>Text</type>
</CustomField>