knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPPortNumber__c.field-meta.xml
<CustomField>
    <fullName>FTPPortNumber__c</fullName>
    <label>FTPPortNumber</label>
    <length>25</length>
    <type>Text</type>
</CustomField>