knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPRemoteDirectory__c.field-meta.xml
<CustomField>
    <fullName>FTPRemoteDirectory__c</fullName>
    <label>FTPRemoteDirectory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>