knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPRemoteMask__c.field-meta.xml
<CustomField>
    <fullName>FTPRemoteMask__c</fullName>
    <label>FTPRemoteMask</label>
    <length>255</length>
    <type>Text</type>
</CustomField>