knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPServerAddress__c.field-meta.xml
<CustomField>
    <fullName>FTPServerAddress__c</fullName>
    <label>FTPServerAddress</label>
    <length>35</length>
    <type>Text</type>
</CustomField>