knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/FTPUserName__c.field-meta.xml
<CustomField>
    <fullName>FTPUserName__c</fullName>
    <label>FTPUserName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>