knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Greet_the_Seat__c.field-meta.xml
<CustomField>
    <fullName>Greet_the_Seat__c</fullName>
    <inlineHelpText>greet pt &lt; 10 min</inlineHelpText>
    <label>Greet the Seat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Place</fullName>
            </value>
            <value>
                <fullName>To be presented</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>