knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/HiOps_Remote_Access__c.field-meta.xml
<CustomField>
    <fullName>HiOps_Remote_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HiOps Remote Access</label>
    <type>Checkbox</type>
</CustomField>