knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/HM_Auto_Reg_Active__c.field-meta.xml
<CustomField>
    <fullName>HM_Auto_Reg_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HM Auto Reg Active</label>
    <type>Checkbox</type>
</CustomField>