knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/HM_Auto_Reg_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HM_Auto_Reg_Start_Date__c</fullName>
    <label>HM Auto Reg Start Date</label>
    <type>Date</type>
</CustomField>