knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/HM_Care_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>HM_Care_Transition_Date__c</fullName>
    <label>HM Care Transition Date</label>
    <type>Date</type>
</CustomField>