knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Hosp_Refused_Offshore_But_No_Offshore_Re__c.field-meta.xml
<CustomField>
    <fullName>Hosp_Refused_Offshore_But_No_Offshore_Re__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hosp Refused Offshore But No Offshore Re</label>
    <type>Checkbox</type>
</CustomField>