knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/If_other_backup_procedure_please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_other_backup_procedure_please_specify__c</fullName>
    <label>If other backup procedure,please specify</label>
    <length>200</length>
    <type>Text</type>
</CustomField>