knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/If_other_enter_Other_PD_Type__c.field-meta.xml
<CustomField>
    <fullName>If_other_enter_Other_PD_Type__c</fullName>
    <label>If other, enter Other PD Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>