knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/If_other_enter_Other_Tracking_Board_EMR__c.field-meta.xml
<CustomField>
    <fullName>If_other_enter_Other_Tracking_Board_EMR__c</fullName>
    <label>If other, enter Other Tracking Board EMR</label>
    <type>TextArea</type>
</CustomField>