knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Immediate_Bedding__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Bedding__c</fullName>
    <label>Immediate Bedding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Place</fullName>
            </value>
            <value>
                <fullName>To be presented</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>