knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Include_in_mySCP_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Include_in_mySCP_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in mySCP Coverage</label>
    <type>Checkbox</type>
</CustomField>