knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Include_technical_contact_information__c.field-meta.xml
<CustomField>
    <fullName>Include_technical_contact_information__c</fullName>
    <label>Include technical contact information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>