knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Inpatient_Facility_Translate_Code__c.field-meta.xml
<CustomField>
    <fullName>Inpatient_Facility_Translate_Code__c</fullName>
    <label>Inpatient Facility Translate Code</label>
    <type>TextArea</type>
</CustomField>