knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Inpatient_Response__c.field-meta.xml
<CustomField>
    <fullName>Inpatient_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inpatient Responses</label>
    <type>Checkbox</type>
</CustomField>