knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Log_Access__c.field-meta.xml
<CustomField>
    <fullName>Log_Access__c</fullName>
    <label>Log Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFS</fullName>
            </value>
            <value>
                <fullName>Direct EMR</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>Faxed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>