knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Log_Issues__c.field-meta.xml
<CustomField>
    <fullName>Log_Issues__c</fullName>
    <label>Log Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>