knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Log_Parser__c.field-meta.xml
<CustomField>
    <fullName>Log_Parser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Parser</label>
    <type>Checkbox</type>
</CustomField>