knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Logs_Sent_To_Offshore__c.field-meta.xml
<CustomField>
    <fullName>Logs_Sent_To_Offshore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logs Sent To Offshore</label>
    <type>Checkbox</type>
</CustomField>