knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Mail_Contact_at_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Mail_Contact_at_Hospital__c</fullName>
    <label>Mail Contact at Hospital</label>
    <type>TextArea</type>
</CustomField>