knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Manual_Pull_Lag_Time__c.field-meta.xml
<CustomField>
    <fullName>Manual_Pull_Lag_Time__c</fullName>
    <label>Manual Pull Lag Time</label>
    <type>TextArea</type>
</CustomField>