knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Medical_Screening_Billable__c.field-meta.xml
<CustomField>
    <fullName>Medical_Screening_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Screening Billable</label>
    <type>Checkbox</type>
</CustomField>