knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Nurses_Reports_Available__c.field-meta.xml
<CustomField>
    <fullName>Nurses_Reports_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reports Available</label>
    <type>Checkbox</type>
</CustomField>