knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Offshore_access_logs__c.field-meta.xml
<CustomField>
    <fullName>Offshore_access_logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offshore access logs</label>
    <type>Checkbox</type>
</CustomField>