knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Offshore_Query_Pulled_By_Offshore__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Query_Pulled_By_Offshore__c</fullName>
    <label>Offshore Query Pulled By Offshore</label>
    <type>TextArea</type>
</CustomField>