knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Old_Documentation_System__c.field-meta.xml
<CustomField>
    <fullName>Old_Documentation_System__c</fullName>
    <label>Old Documentation System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electronic: Allscripts</fullName>
            </value>
            <value>
                <fullName>Electronic: Cerner</fullName>
            </value>
            <value>
                <fullName>Electronic: CPSI</fullName>
            </value>
            <value>
                <fullName>Electronic: Empower</fullName>
            </value>
            <value>
                <fullName>Electronic: EPIC</fullName>
            </value>
            <value>
                <fullName>Electronic: EPowerDoc</fullName>
            </value>
            <value>
                <fullName>Electronic: McKesson</fullName>
            </value>
            <value>
                <fullName>Electronic: Medhost</fullName>
            </value>
            <value>
                <fullName>Electronic: Meditech</fullName>
            </value>
            <value>
                <fullName>Electronic: Other</fullName>
            </value>
            <value>
                <fullName>Electronic: Paragon</fullName>
            </value>
            <value>
                <fullName>Electronic: Soarian</fullName>
            </value>
            <value>
                <fullName>Electronic: Sunrise</fullName>
            </value>
            <value>
                <fullName>Electronic: T-system EV</fullName>
            </value>
            <value>
                <fullName>Paper: Empower</fullName>
            </value>
            <value>
                <fullName>Paper: LYNX</fullName>
            </value>
            <value>
                <fullName>Paper: Other</fullName>
            </value>
            <value>
                <fullName>Paper: QualChart</fullName>
            </value>
            <value>
                <fullName>Paper: T-system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>