knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/OnBase_Effective_DOS__c.field-meta.xml
<CustomField>
    <fullName>OnBase_Effective_DOS__c</fullName>
    <description>The Date of Service to Start Using Onbase Workflow for a facility.</description>
    <inlineHelpText>Enter the Date of Service to Start Using Onbase Workflow for a facility.</inlineHelpText>
    <label>OnBase Effective DOS</label>
    <type>Date</type>
</CustomField>