knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Onbase_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Onbase_Termination_Date__c</fullName>
    <label>Onbase Termination Date</label>
    <type>Date</type>
</CustomField>