knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Online_Staff_Trainers_Contact__c.field-meta.xml
<CustomField>
    <fullName>Online_Staff_Trainers_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Staff Trainers Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facility Profiles (Online Staff Trainers Contact)</relationshipLabel>
    <relationshipName>R00N40000001iQtcEAE</relationshipName>
    <type>Lookup</type>
</CustomField>