knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Online_Training_Contact__c.field-meta.xml
<CustomField>
    <fullName>Online_Training_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Training Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facility Profiles (Online Training Contact)</relationshipLabel>
    <relationshipName>R00N40000001iS8sEAE</relationshipName>
    <type>Lookup</type>
</CustomField>