knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Onsite_HiOps__c.field-meta.xml
<CustomField>
    <fullName>Onsite_HiOps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsite HiOps</label>
    <type>Checkbox</type>
</CustomField>