knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/OperationsContact__c.field-meta.xml
<CustomField>
    <fullName>OperationsContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facility_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>