knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Patient_Tracking_None__c.field-meta.xml
<CustomField>
    <fullName>Patient_Tracking_None__c</fullName>
    <defaultValue>false</defaultValue>
    <label>None</label>
    <type>Checkbox</type>
</CustomField>