knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/PD_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_Go_Live_Date__c</fullName>
    <label>PD Go Live Date</label>
    <type>Date</type>
</CustomField>