knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Physician_Documentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Physician_Documentation_Type__c</fullName>
    <label>Physician Documentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allscripts</fullName>
            </value>
            <value>
                <fullName>AthenaHealth</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>CPSI</fullName>
            </value>
            <value>
                <fullName>Empower</fullName>
                <label>EmpowER</label>
            </value>
            <value>
                <fullName>EPIC</fullName>
            </value>
            <value>
                <fullName>EPowerDoc</fullName>
            </value>
            <value>
                <fullName>Gehrimed</fullName>
            </value>
            <value>
                <fullName>Hybrid (EMR/Paper)</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
                <label>MCKESSON</label>
            </value>
            <value>
                <fullName>Medhost</fullName>
                <label>MEDHOST</label>
            </value>
            <value>
                <fullName>Meditech</fullName>
                <label>MEDITECH</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paper Other</fullName>
            </value>
            <value>
                <fullName>Paper SCP Templates</fullName>
            </value>
            <value>
                <fullName>Paper T-System</fullName>
            </value>
            <value>
                <fullName>Paragon</fullName>
            </value>
            <value>
                <fullName>PICIS</fullName>
            </value>
            <value>
                <fullName>T-System EV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>