knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Planned_Date_of_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date_of_Implementation__c</fullName>
    <label>Planned Date of Implementation</label>
    <type>Date</type>
</CustomField>