knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Planned_Electronic_Phys_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Planned_Electronic_Phys_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planned Phys Doc Electronic System</label>
    <type>Checkbox</type>
</CustomField>