knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Planned_Scribe_Company__c.field-meta.xml
<CustomField>
    <fullName>Planned_Scribe_Company__c</fullName>
    <label>Planned Scribe Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>