knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/PreCoding_Entity__c.field-meta.xml
<CustomField>
    <fullName>PreCoding_Entity__c</fullName>
    <label>PreCoding Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGS</fullName>
            </value>
            <value>
                <fullName>E4E</fullName>
            </value>
            <value>
                <fullName>SCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>