knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Primary_Hospital_Information_System__c.field-meta.xml
<CustomField>
    <fullName>Primary_Hospital_Information_System__c</fullName>
    <label>Primary Hospital Information System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital Radiography</fullName>
            </value>
            <value>
                <fullName>Labs</fullName>
            </value>
            <value>
                <fullName>Old Records Reviewed</fullName>
            </value>
            <value>
                <fullName>PACS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>