knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Process_When_System_Goes_Down__c.field-meta.xml
<CustomField>
    <fullName>Process_When_System_Goes_Down__c</fullName>
    <label>Process When System Goes Down</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>