knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Program_Implementation_Results__c.field-meta.xml
<CustomField>
    <fullName>Program_Implementation_Results__c</fullName>
    <description>Five Minute Wait Loss Campaign</description>
    <label>Program Implementation Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Some improvement noted</fullName>
            </value>
            <value>
                <fullName>No improvement</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>