knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Program_presented_by_Ops_Team__c.field-meta.xml
<CustomField>
    <fullName>Program_presented_by_Ops_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Five Minute Wait Loss Campaign</description>
    <label>Program presented by Ops Team</label>
    <type>Checkbox</type>
</CustomField>