knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Program_Used_To_Pull_Chart__c.field-meta.xml
<CustomField>
    <fullName>Program_Used_To_Pull_Chart__c</fullName>
    <label>Program Used To Pull Chart</label>
    <type>TextArea</type>
</CustomField>