knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Provider_In_Triage_Description__c.field-meta.xml
<CustomField>
    <fullName>Provider_In_Triage_Description__c</fullName>
    <label>Provider In Triage Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>