knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Provider_Triage_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Provider_Triage_Coverage__c</fullName>
    <label>Provider Triage Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year Round</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Overflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>