knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Queries_Returned_to_HiOps_First__c.field-meta.xml
<CustomField>
    <fullName>Queries_Returned_to_HiOps_First__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queries Returned to HiOps First</label>
    <type>Checkbox</type>
</CustomField>